2008-08-24  Mirco Bauer <meebey@meebey.net> 

	* EngineManagerDialog.cs, Entry.cs, Frontend.cs: Use _() wrapper.

2008-08-24  Mirco Bauer <meebey@meebey.net> 

	* Frontend.cs: Initialize gettext during startup.

2008-08-22  Mirco Bauer <meebey@meebey.net> 

	* Chats/ChatView.cs: Disabled console writelines.
	
	  Use Process.Start() if not compiled with UI_GNOME.

2008-08-22  Mirco Bauer <meebey@meebey.net> 

	* Frontend.cs: Implemtend ShowError(string) method.
	* Preferences/ServerListView.cs: Handle InvalidOperationException.

2008-08-22  Mirco Bauer <meebey@meebey.net> 

	* Chats/ChatView.cs: Support empty timestamp formats. (closes trac bug #84)

2008-08-21  Mirco Bauer <meebey@meebey.net> 

	* Preferences/PreferencesDialog.cs: Use the more descriptive "<System
	  Default>" as text for encodings instead of an empty string. (closes trac
	  bug #82)

2008-08-21  Mirco Bauer <meebey@meebey.net> 

	* ChatViewManager.cs: Fixed sorting order of group and person chats when
	  there is no next protocol chat available. (Closes trac bug #87)

2008-08-05  Mirco Bauer <meebey@meebey.net> 

	* Preferences/PreferencesDialog.cs: Use ColorTools instead of broken local
	  conversion methods.
	* Chats/ChatView.cs: Apply overriden background color in AddMessage().
	
	  Better debug output for GetBestTextColor().
	* ColorTools.cs: Implemented GetHexCodeColor(Gdk.Color).
	
	  Check hex code length in GetGdkColor(string).
	
	  Fixed Gdk.Color to hex code conversion using bit shifting. (thanks to
	  Zhila)

2008-08-04  Mirco Bauer <meebey@meebey.net> 

	* Chats/ChatView.cs, ColorTools.cs: Implemented getting a good color based
	  on the background color for a good contrast. Thanks to Mikael and Zhila
	  for the algorithm!

2008-07-30  Mirco Bauer <meebey@meebey.net> 

	* Frontend-GNOME.mdp, smuxi-frontend-gnome.exe.config: Added .exe.config for
	  log4net configuration to project.

2008-07-30  Mirco Bauer <meebey@meebey.net> 
