@@ -1,5 +1,10 @@
 2008-08-24  Mirco Bauer <meebey@meebey.net> 
 
+	* MainWindow.cs, Frontend.cs: Implemented store and restore window size /
+	  position. (closes trac ticket #91)
+
+2008-08-24  Mirco Bauer <meebey@meebey.net> 
+
 	* EngineManagerDialog.cs, Entry.cs, Frontend.cs: Use _() wrapper.
 
 2008-08-24  Mirco Bauer <meebey@meebey.net> 
